--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "new-folder",
+  "name": "telegram_word_tracker_bot",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
